--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 
 <div id="app"></div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/index.js"></script>
-
