--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <link rel="stylesheet" href="css/index.css">
 
+<body>
 <div id="app"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/index.js"></script>
+</body>
